[package]
name = "slice_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.142", features = ["derive", "rc"] }
rmp-serde = "1.1.0"
indicatif = "0.17.0"
rand = "0.8.5"
rayon = "1.5.3"
